--- a/css/style.css
+++ b/css/style.css
@@ -337,6 +337,7 @@ h5 {
     height: 100%;
     width: 100%;
     background: rgba(0, 0, 0, 0.96);
+	opacity: 0.89;
     z-index: 2;
     text-align: center;
     padding: 50px 0;
