--- a/css/style.css
+++ b/css/style.css
@@ -427,6 +427,7 @@ h5 {
     display: table;
     height: 100vh;
     width: 100%;
+	background-image: url("smoke-bg.jpg");
 }
 
 .box-intro .table-cell {
