--- a/css/style.css
+++ b/css/style.css
@@ -37,7 +37,8 @@ body {
     height: 100%;
     font-family: 'Poppins', sans-serif;
     line-height: 1.8;
-    color: #999
+    color: #999;
+    background-image: url("../img/smoke-bg.jpg");
 }
 
 .no-padding {
@@ -427,7 +428,7 @@ h5 {
     display: table;
     height: 100vh;
     width: 100%;
-	background-image: url("../img/smoke-bg.jpg");
+	
 }
 
 .box-intro .table-cell {
