--- a/css/style.css
+++ b/css/style.css
@@ -294,7 +294,7 @@ h5 {
 
 .box-primary-nav-trigger .box-menu-icon.is-clicked::before,
 .box-primary-nav-trigger .box-menu-icon.is-clicked::after {
-    background-color: 393939;
+    background-color: blueviolet;
 }
 
 .box-primary-nav-trigger .box-menu-icon.is-clicked::before {
