--- a/css/style.css
+++ b/css/style.css
@@ -242,7 +242,7 @@ h5 {
 }
 
 .box-primary-nav-trigger .box-menu-text {
-    color: #393939;
+    color: lightgray;
     text-transform: uppercase;
     font-weight: 700;
     display: none;
