Changed menu titles color to blueviolet

--- a/css/style.css
+++ b/css/style.css
@@ -389,7 +389,7 @@ h5 {
 }
 
 .box-primary-nav .box-label {
-    color: #ffbf00;
+    color: blueviolet;
     text-transform: uppercase;
     font-weight: 700;
     font-size: 17px;
