--- a/css/style.css
+++ b/css/style.css
@@ -140,7 +140,7 @@ h5 {
     width: 100%;
     height: 100%;
     border-radius: 50%;
-    background-color: #ffbf00;
+    background-color: blueviolet;
     opacity: 0.6;
     position: absolute;
     top: 0;
