--- a/css/style.css
+++ b/css/style.css
@@ -111,7 +111,7 @@ h5 {
     left: 0;
     right: 0;
     bottom: 0;
-    background-color: #f5f5f5;
+    background-color: #393939;
     /* change if the mask should be a color other than white */
     z-index: 1000;
     /* makes sure it stays on top */
