lightened design + branding main intro text
changed from #999 to lightgray under .box-intro h5 {

--- a/css/style.css
+++ b/css/style.css
@@ -450,7 +450,7 @@ b i:last-child {
 .box-intro h5 {
     letter-spacing: 4px;
     text-transform: uppercase;
-    color: #999;
+    color: lightgray;
     line-height: 1.7
 }
 
