--- a/css/style.css
+++ b/css/style.css
@@ -831,7 +831,7 @@ b i:last-child {
 footer {
     padding: 30px 0;
     text-align: center;
-    background: #f5f5f5
+    background: #393939
 }
 
 .copyright {
