changed footer background color again
#393939 to #14111a;

--- a/css/style.css
+++ b/css/style.css
@@ -831,7 +831,7 @@ b i:last-child {
 footer {
     padding: 30px 0;
     text-align: center;
-    background: #393939
+    background: #14111a
 }
 
 .copyright {
